# rmw_gurumdds-release

./: 0001-Drop-membership-in-rmw_implementation_packages-group.patch  0001-Switch-to-ament_cmake_ros_core-package.patch  CHANGELOG.rst  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
demo_nodes_cpp_native_gurumdds/: package.xml
gurumdds_cmake_module/: CHANGELOG.rst  package.xml
gurumdds_cmake_module/cmake/Modules/: FindGurumDDS.cmake
include/rmw_gurumdds_cpp/: cdr_serialization_buffer.inl  context_listener_thread.hpp  event_converter.hpp  identifier.hpp  message_deserializer.inl  message_serializer.inl  names_and_types_helpers.hpp  namespace_prefix.hpp  rmw_context_impl.hpp  rmw_publisher.hpp  rmw_subscription.hpp  type_support_common.hpp  type_support_service.inl  wait.hpp
rmw_gurumdds_cpp/: CHANGELOG.rst  CMakeLists.txt  package.xml
rmw_gurumdds_cpp/src/: gid.cpp  (+32 more)
rmw_gurumdds_shared_cpp/: package.xml
rpm/: ros-galactic-rmw-gurumdds-cpp.spec  ros-galactic-rmw-gurumdds-shared-cpp.spec  ros-iron-gurumdds-cmake-module.spec  ros-rolling-gurumdds-cmake-module.spec  ros-rolling-rmw-gurumdds-cpp.spec  ros-rolling-rmw-gurumdds-shared-cpp.spec  template.spec  template.spec.em
src/: cdr_deser_buffer.cpp  context_listener_thread.cpp  event_converter.cpp  event_info_common.cpp  get_entities.cpp  qos.cpp  rmw_client.cpp  rmw_context_impl.cpp  rmw_publisher.cpp  rmw_subscription.cpp  rmw_topic_names_and_types.cpp  type_support_common.cpp  wait.cpp
(+27 files in other folders)
